# agentic-order-management

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  starter.py
app/agents/: enquiry_agent.py
app/agents/enquiry/: chain.py  enquiry_agent.py  ingestion.py  prompts.py  retriever.py
app/config/: db_config.py  env_config.py
app/models/: inventory.py  inventory_audit.py  order.py  order_audit.py
app/prompts/: prompt.py
app/repository/: inventory.py  inventory_audit.py  order.py  order_audit.py
app/routes/: chat.py  inventory.py  order.py
app/schemas/: chat.py  inventory.py  order.py
app/services/: chat_service.py  langchain_service.py
app/tools/: cancel_order.py  check_inventory.py  create_inventory_audit.py  create_order_audit.py  ingestion.py  place_order.py  retrieve_product_information.py  retriever.py  update_inventory.py
app/utils/: seed_inventory.py
website/: app.py
