[project]
name = "agentic-order-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "sqlite-web>=0.7.2",
    "streamlit>=1.57.0",
    "uvicorn>=0.48.0",
]
